[gd_scene load_steps=5 format=3 uid="uid://ckmudpmhevs7w"]

[ext_resource type="Script" path="res://npc/villager.gd" id="1_d67ib"]
[ext_resource type="Texture2D" uid="uid://6lrv5ahdcirc" path="res://arts/Villager.png" id="2_k6twm"]
[ext_resource type="PackedScene" uid="uid://4rq4fd46p6qa" path="res://gui/dialogue.tscn" id="3_64y3d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_as377"]
size = Vector2(12, 3)

[node name="villager" type="CharacterBody2D"]
script = ExtResource("1_d67ib")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_k6twm")
hframes = 4
vframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_as377")

[node name="dialogueDetection" type="Node2D" parent="."]

[node name="Dialogue" parent="dialogueDetection" instance=ExtResource("3_64y3d")]
position = Vector2(0, -17)

[connection signal="body_entered" from="dialogueDetection/Dialogue" to="." method="_on_dialogue_body_entered"]
[connection signal="body_exited" from="dialogueDetection/Dialogue" to="." method="_on_dialogue_body_exited"]
